a bunch of UI updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,17 +24,10 @@
     
     <h1><a href="/home">Mountain Metrics</a></h1>
     
-    <div class="ad468x60">        
-    <p width="100%" align="center"><embed pluginspage="http://www.adobe.com/go/getflashplayer" src="http://www.yourminis.com/Dir/GetContainer.api?uri=yourminis/yourminis/mini:weather"  wmode="transparent" width="250" height="80" FlashVars="loc=Lake%20Tahoe%2C%20CA&unit=s&zipcode=USCA0584&dayview=5day&title=Weather%20%28USCA0584%29&mininame=weather&height=70&width=240&xheight=80&xwidth=250&uri=yourminis%2Fyourminis%2Fmini%3Aweather&swfurl=%2Fwidget%5Fweatherchannel%2Eswf&" type="application/x-shockwave-flash" allowScriptAccess="always"></embed></p>
-    </div>
-    
     <ul class="categories">
-      <li><a href="/home">Avalanche</a></li>
-      <li><a href="/home">Media</a></li>
-            <li><a href="/home">Logs</a></li>
-
-      <li><a href="/home">Snow</a></li>
-      <li><a href="/home">Weather</a></li>
+      <li><a href="/home">Basic</a></li>
+      <li><a href="/home">Advanced</a></li>
+      <li><a href="/home"</a>&nbsp;</li>
     </ul>
     
     
