--- a/templates/home.html
+++ b/templates/home.html
@@ -5,27 +5,95 @@
 	  <!-- BEGIN content -->
   <div id="content">
     <!-- begin featured -->
-      <!-- begin post -->
+      <!-- begin left column -->
+      
+      <!-- BEGIN weather forecast module -->
       <div class="post">
-        <h2><a href="/home">Temperature Profile</a></h2>
-        <p>Grab data from NOAA and display profile of last seven days highs and lows.</p>
-<img src="http://chart.apis.google.com/chart?cht=lc&chs=400x200&chxt=x,y&chxr=0,0,10|1,0,16.8&chd=t:71.4,65.5,59.5,65.5,77.4,95.2,89.3,83.3,65.5,71.4,77.4|59.5,47.6,29.8,23.8,29.8,35.7,41.7,29.8,23.8,35.7,41.7&chco=990000,339966&chls=1,1,0|1,1,0|1,1,0&chdl=High|Low
- &chm=o,990000,0,0,3|o,990000,0,1,3|o,990000,0,2,3|o,990000,0,3,3|o,990000,0,4,3|o,990000,0,5,3|o,990000,0,6,3|o,990000,0,7,3|o,990000,0,8,3|o,990000,0,9,3|o,990000,0,10,3|o,990000,0,11,3|o,990000,0,12,3|o,990000,0,13,3|o,990000,0,14,3|o,990000,0,15,3|o,990000,0,16,3|o,990000,0,17,3|o,990000,0,18,3|o,990000,0,19,3|o,990000,0,20,3|o,990000,0,21,3|o,990000,0,22,3|o,990000,0,23,3|o,990000,0,24,3|o,990000,0,25,3|o,990000,0,26,3|o,990000,0,27,3|o,990000,0,28,3|o,990000,0,29,3|o,990000,0,30,3|o,990000,0,31,3|o,990000,0,32,3|
-  o,339966,1,0,3|o,339966,1,1,3|o,339966,1,2,3|o,339966,1,3,3|o,339966,1,4,3|o,339966,1,5,3|o,339966,1,6,3|o,339966,1,7,3|o,339966,1,8,3|o,339966,1,9,3|o,339966,1,10,3|o,339966,1,11,3|o,339966,1,12,3|o,339966,1,13,3|o,339966,1,14,3|o,339966,1,15,3|o,339966,1,16,3|o,339966,1,17,3|o,339966,1,18,3|o,339966,1,19,3|o,339966,1,20,3|o,339966,1,21,3|o,339966,1,22,3
-"/>
+        <h2><a href="/home">3 Day Weather Forecast</a></h2>
+        <p>Today {Insert Day}</p>
+          <ul>
+            <li>High Temp: {Insert Temp}</li>
+            <li>Low Temp: {Insert Temp}</li>
+            <li>New Snow: {Insert New Snow}</li>
+            <li>Expected Snowfall: {Insert Expected Snow}</li>
+          </ul>
+        
+        <p>Tomorrow {Insert Day}</p>
+          <ul>
+            <li>High Temp: {Insert Temp}</li>
+            <li>Low Temp: {Insert Temp}</li>
+            <li>Expected Snowfall: {Insert Expected Snow}</li>
+          </ul>
+
+        <p>{Insert Day}</p>
+          <ul>
+            <li>High Temp: {Insert Temp}</li>
+            <li>Low Temp: {Insert Temp}</li>
+            <li>Expected Snowfall: {Insert Expected Snow}</li>
+          </ul>
+       <br />
       </div>
-      <!-- end post -->
-      <!-- end post -->
-    <!-- end featured -->
-    <!-- begin post -->
-    <div class="post"> 
-      <h2><a href="/home">Road Conditions</a></h2>
+      <!-- END weather forecast module -->
+      
+      <!-- BEGIN resort snow report module -->
+      <div class="post">
+        <h2><a href="/home">Today's Resort Snow Report</a></h2>
+        <p>Squaw Valley</p>
+          <ul>
+            <li>High Temp: {Insert Temp}</li>
+            <li>Low Temp: {Insert Temp}</li>
+            <li>New Snow: {Insert New Snow}</li>
+            <li>Expected Snowfall: {Insert Expected Snow}</li>
+          </ul>
+        
+        <p>Alpine Meadows</p>
+          <ul>
+            <li>High Temp: {Insert Temp}</li>
+            <li>Low Temp: {Insert Temp}</li>
+            <li>New Snow: {Insert New Snow}</li>
+            <li>Expected Snowfall: {Insert Expected Snow}</li>
+          </ul>
+
+        <p>Kirkwood</p>
+          <ul>
+            <li>High Temp: {Insert Temp}</li>
+            <li>Low Temp: {Insert Temp}</li>
+            <li>New Snow: {Insert New Snow}</li>
+            <li>Expected Snowfall: {Insert Expected Snow}</li>
+          </ul>
+       <br />
+      </div>
+      <!-- END resort snow report module -->
+      
+      <!-- BEGIN dot traffic conditions module -->
+      <div class="post">
+        <h2><a href="/home">DOT Road Conditions</a></h2>
+        <p>Chains</p>
+          <ul>
+            <li>Chains Required: {Insert Yes / No}</li>
+            <li>Location of Requirement: {Insert Location}</li>
+          </ul>
+        
+        <p>Details</p>
+          <ul>
+            <li>{Insert Details: EX: A high wind advisory is in effect from Solano Co line to the Sacramento Valley.  Travel is not recommended for trailers and campers. </li>
+          </ul>
+       <br />
+      </div>
+      <!-- END dot traffic conditions module -->
+
+      <!-- BEGIN google maps with traffic layer of tahoe -->
+      <div class="post"> 
+        <h2><a href="/home">Map of Traffic Conditions</a></h2>
 <table cellspacing="0" cellpadding="0" border="0"><tr><td><iframe src="http://www.map-generator.net/extmap.php?name=Squaw%20Valley%20USA&amp;address=squaw%20valley%2C%20calififornia&amp;width=440&amp;height=300&amp;maptype=map&amp;zoom=14&amp;hl=en&amp;t=1255915918" width="440" height="300" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"></iframe></td></tr></td></tr></table><!-- Do not change code! -->
-<br />
-    </div>
-        <div class="post"> 
+         <br />
+      </div>
+      <!-- END google maps with traffic layer of tahoe -->
+    
+      <!-- BEGIN twitter feed of 'tahoe' search -->
+    <div class="post"> 
       <h2><a href="/home">Twitter Feed</a></h2>
-     <script language="javascript">
+      <script language="javascript">
 	/* widget config */
 	var jtw_divname                = 'jtw_widget1';
 	var jtw_search                 = 'tahoe';
@@ -53,57 +121,74 @@
 	var jtw_tweet_lang             = 'en';
 	var jtw_widget_refresh_interval= 10;
 	
-	
-</script>
-<script src="http://tweetgrid.com/widget/widget.js" type="text/javascript"></script>
-
-
-    </div>
-    <!-- end post -->
+      </script>
+     <script src="http://tweetgrid.com/widget/widget.js" type="text/javascript"></script>
+  </div>
+      <!-- END twitter feed of 'tahoe' search -->
+  
+  <!-- END left column -->
   </div>
   <!-- END content -->
   
-  <!-- BEGIN sidebar -->
+  
+  
+  <!-- BEGIN right column -->
   <div id="sidebar">    
-    <!-- begin featured video -->
-    <div class="box">
-      <h2>Avalanche Conditions</h2>
-      <ul class="popular">
-        <li> <a href="http://avalanche.org">Today's Report</a>
-          <p>With the approach of winter, new snow accumulation in the mid and upper elevations of the Sierra signals the possibility of avalanche activity. Don't let the conditions take you by surprise. Be observant, and use caution if venturing into the backcountry.  More variable, complex, and subtle avalanche conditions exist during the early season, making this time of year unexpectedly dangerous. The snowpack does not need to be deep for an avalanche to occur. If the decision is made to travel over snow covered areas, use all of the same care as is required mid winter. Each person should travel with avalanche rescue equipment including a beacon, probe, and shovel with which they are well practiced. Allow only one person at a time to travel on slopes that are steeper than 30 degrees.  <a href="http://www.sierraavalanchecenter.org/advisory.php" target="_blank">Full report...</a></p>
-        </li>
-      </ul>
-    </div>
-    <!-- end featured video -->
     
-    <!-- begin popular posts -->
-    <div class="box">
-      <h2>Snowfall Trends</h2>
-      <ul class="popular">
-        <li> <a href="/home">Display Snowfall Trends</a>
-          <p>Grab data and display chart of yearly snowfall.</p>
-        </li>
-        <li><img src="http://chart.apis.google.com/chart?chs=400x200&chd=t:9,16,51,51,51,52,58,59,61,62,63,67,69,69,69,72,74,74,89,93,96,98,100,100|4,8,12,16,20,25,29,33,37,41,45,50,54,58,62,66,70,75,79,83,87,91,95,100&cht=lxy&chxt=x,y&chxr=0,0,155|1,0,24" />
-        </li>
-      </ul>
-    </div>
-    <!-- end popular posts -->
+      <!-- BEGIN avalanche conditions module -->
+      <div class="box">
+        <h2>Today's Avalanche Report</h2>
+        <ul class="popular">
+        <img src="http://chart.apis.google.com/chart?cht=gom&chs=425x150&chd=t:70&chl=Low/Moderate&chdlp=b" />
+            <p>6 to 12 inches of snow fell across the forecast area since yesterday afternoon. Snow showers started to taper off last night as the low-pressure system continued moving east. Along with the snow, this system brought sustained winds between 40 and 70 mph with some gusts reaching 116 mph. As this system exits the region today, the winds should decrease, and the skies should begin to clear. Another smaller low pressure system passing to the north of the forecast area should cause the wind to increase again overnight and through Sunday. This second system does not have much water associated with it and should not produce any additional accumulation.  <a href="http://www.sierraavalanchecenter.org/advisory.php" target="_blank">Full report...</a></p>
+          </li>
+        </ul>
+        <br />
+      </div>
+      <!-- END avalanche conditions module -->
+      
+      <!-- BEGIN detailed weather module -->
+      <div class="box">
+        <h2>2 Day Detailed Weather</h2>
+        <ul class="popular">
+            <p>Today</p>
+            <p>Tonight</p>
+            <p>Tomorrow</p>
+
+          </li>
+        </ul>
+        <br />
+      </div>
+      <!-- END detailed weather module -->
+
+      <!-- BEGIN snowfall trend module -->
+      <div class="box">
+        <h2>Snowfall Trends</h2>
+        <ul class="popular">
+          <li> <a href="/home">Display Snowfall Trends</a>
+            <p>Grab data and display chart of yearly snowfall.</p>
+          </li>
+          <li><img src="http://chart.apis.google.com/chart?cht=lc&chs=400x200&chxt=x,y&chxr=0,0,10|1,0,16.8&chd=t:71.4,65.5,59.5,65.5,77.4,95.2,89.3,83.3,65.5,71.4,77.4|59.5,47.6,29.8,23.8,29.8,35.7,41.7,29.8,23.8,35.7,41.7&chco=990000,339966&chls=1,1,0|1,1,0|1,1,0&chdl=Above 7,000 Ft|Below 7,000 Ft&chdlp=b
+ &chm=o,990000,0,0,3|o,990000,0,1,3|o,990000,0,2,3|o,990000,0,3,3|o,990000,0,4,3|o,990000,0,5,3|o,990000,0,6,3|o,990000,0,7,3|o,990000,0,8,3|o,990000,0,9,3|o,990000,0,10,3|o,990000,0,11,3|o,990000,0,12,3|o,990000,0,13,3|o,990000,0,14,3|o,990000,0,15,3|o,990000,0,16,3|o,990000,0,17,3|o,990000,0,18,3|o,990000,0,19,3|o,990000,0,20,3|o,990000,0,21,3|o,990000,0,22,3|o,990000,0,23,3|o,990000,0,24,3|o,990000,0,25,3|o,990000,0,26,3|o,990000,0,27,3|o,990000,0,28,3|o,990000,0,29,3|o,990000,0,30,3|o,990000,0,31,3|o,990000,0,32,3|
+  o,339966,1,0,3|o,339966,1,1,3|o,339966,1,2,3|o,339966,1,3,3|o,339966,1,4,3|o,339966,1,5,3|o,339966,1,6,3|o,339966,1,7,3|o,339966,1,8,3|o,339966,1,9,3|o,339966,1,10,3|o,339966,1,11,3|o,339966,1,12,3|o,339966,1,13,3|o,339966,1,14,3|o,339966,1,15,3|o,339966,1,16,3|o,339966,1,17,3|o,339966,1,18,3|o,339966,1,19,3|o,339966,1,20,3|o,339966,1,21,3|o,339966,1,22,3
+"/>
+          </li>
+        </ul>
+      </div>
+      <!-- END snowfall trend module -->
     
-        <!-- begin popular posts -->
-    <div class="box">
-      <h2>Current Weather</h2>
-      <ul class="popular">
-        <li><a href="http://www.weather.gov/xml/current_obs/KTRK.rss">Display RSS Feed</a>
-        
-          <p>RSS feed above will display current weather conditions.</p>
-          <p>Winds are from the Southwest at 9.2 gusting to 24.2 MPH (8 gusting to 21 KT).</p> 
-          <p>The humidity is 51%. The wind chill is 55.</p> 
-          <p>Last Updated on Oct 18 2009, 4:45 pm PDT.</p>
-          <p>OR http://www.snow-forecast.com/pages/configure_feed</p>
-        </li>
-      </ul>
-    </div>
-    <!-- end popular posts -->
+      <!-- BEGIN snowfall trend module -->
+      <div class="box">
+        <h2>Temperature Profile</h2>
+        <ul class="popular">
+        <p>Grab data from NOAA and display profile of last seven days highs and lows.</p>
+<img src="http://chart.apis.google.com/chart?cht=lc&chs=400x200&chxt=x,y&chxr=0,0,10|1,0,16.8&chd=t:71.4,65.5,59.5,65.5,77.4,95.2,89.3,83.3,65.5,71.4,77.4|59.5,47.6,29.8,23.8,29.8,35.7,41.7,29.8,23.8,35.7,41.7&chco=990000,339966&chls=1,1,0|1,1,0|1,1,0&chdl=High|Low
+ &chm=o,990000,0,0,3|o,990000,0,1,3|o,990000,0,2,3|o,990000,0,3,3|o,990000,0,4,3|o,990000,0,5,3|o,990000,0,6,3|o,990000,0,7,3|o,990000,0,8,3|o,990000,0,9,3|o,990000,0,10,3|o,990000,0,11,3|o,990000,0,12,3|o,990000,0,13,3|o,990000,0,14,3|o,990000,0,15,3|o,990000,0,16,3|o,990000,0,17,3|o,990000,0,18,3|o,990000,0,19,3|o,990000,0,20,3|o,990000,0,21,3|o,990000,0,22,3|o,990000,0,23,3|o,990000,0,24,3|o,990000,0,25,3|o,990000,0,26,3|o,990000,0,27,3|o,990000,0,28,3|o,990000,0,29,3|o,990000,0,30,3|o,990000,0,31,3|o,990000,0,32,3|
+  o,339966,1,0,3|o,339966,1,1,3|o,339966,1,2,3|o,339966,1,3,3|o,339966,1,4,3|o,339966,1,5,3|o,339966,1,6,3|o,339966,1,7,3|o,339966,1,8,3|o,339966,1,9,3|o,339966,1,10,3|o,339966,1,11,3|o,339966,1,12,3|o,339966,1,13,3|o,339966,1,14,3|o,339966,1,15,3|o,339966,1,16,3|o,339966,1,17,3|o,339966,1,18,3|o,339966,1,19,3|o,339966,1,20,3|o,339966,1,21,3|o,339966,1,22,3
+"/>
+      </div>
+      <!-- END snowfall trend module -->
+
 
   </div>
   <!-- END sidebar -->
