new UI changes and addition of weather related metrics to UI

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -252,12 +252,17 @@ img {
 			margin-bottom: 10px;
 		}
 		#sidebar .box ul {
-			list-style-type: none;
-			padding: 0 10px 10px;
+			padding-left:40px;
+			padding-bottom:5px;
+
 		}
-			#sidebar .box ul li {
-				padding: 3px 0;
-			}
+		#sidebar .box p {
+			padding-left:20px;
+			padding-bottom:5px;
+			margin-right:10px
+
+		}
+
 			#sidebar .box ul li a {
 				color: #2A2A2A;
 				text-decoration: none;
@@ -302,17 +307,15 @@ img {
 		}
 		#sidebar .box .popular li {
 			padding: 8px 0;
-			margin-left:10px;
-
 		}
 		#sidebar .box .popular a {
 			font-weight: bold;
 			text-decoration: underline;
 			color: #390102;
+
 		}
 		#sidebar .box .popular p {
 			padding-top: 5px;
-			margin-left:10px;
 		}
 		#sidebar form {
 			width: 302px; height: 39px;
