--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,7 @@
         <h2><a href="/home">3 Day Weather Forecast</a></h2>
         <p>Today {Insert Day}</p>
           <ul>
+            <li>Current Temp: {Insert Temp}</li>
             <li>High Temp: {Insert Temp}</li>
             <li>Low Temp: {Insert Temp}</li>
             <li>New Snow: {Insert New Snow}</li>
@@ -138,7 +139,7 @@
       <!-- BEGIN avalanche conditions module -->
       <div class="box">
         <h2>Today's Avalanche Report</h2>
-        <p><img src="http://chart.apis.google.com/chart?cht=gom&chs=400x150&chd=t:70&chl=Low/Moderate&chdlp=b" /></p>
+        <p><img src="http://chart.apis.google.com/chart?cht=gom&chs=400x150&chd=t:25&chl=Low/Moderate&chdlp=b" /></p>
             <p>6 to 12 inches of snow fell across the forecast area since yesterday afternoon. Snow showers started to taper off last night as the low-pressure system continued moving east. Along with the snow, this system brought sustained winds between 40 and 70 mph with some gusts reaching 116 mph. As this system exits the region today, the winds should decrease, and the skies should begin to clear. Another smaller low pressure system passing to the north of the forecast area should cause the wind to increase again overnight and through Sunday. This second system does not have much water associated with it and should not produce any additional accumulation.  <a href="http://www.sierraavalanchecenter.org/advisory.php" target="_blank">Full report...</a></p>
         <br />
       </div>
@@ -184,18 +185,14 @@
 
       <!-- BEGIN snowfall trend module -->
       <div class="box">
-        <h2>Snowfall Trends</h2>
-            <p>Grab data and display chart of yearly snowfall.</p>
-<p><img src="http://chart.apis.google.com/chart?cht=lc&chs=400x200&chxt=x,y&chxr=0,0,10|1,0,16.8&chd=t:71.4,65.5,59.5,65.5,77.4,95.2,89.3,83.3,65.5,71.4,77.4|59.5,47.6,29.8,23.8,29.8,35.7,41.7,29.8,23.8,35.7,41.7&chco=990000,339966&chls=1,1,0|1,1,0|1,1,0&chdl=Above 7,000 Ft|Below 7,000 Ft&chdlp=b
- &chm=o,990000,0,0,3|o,990000,0,1,3|o,990000,0,2,3|o,990000,0,3,3|o,990000,0,4,3|o,990000,0,5,3|o,990000,0,6,3|o,990000,0,7,3|o,990000,0,8,3|o,990000,0,9,3|o,990000,0,10,3|o,990000,0,11,3|o,990000,0,12,3|o,990000,0,13,3|o,990000,0,14,3|o,990000,0,15,3|o,990000,0,16,3|o,990000,0,17,3|o,990000,0,18,3|o,990000,0,19,3|o,990000,0,20,3|o,990000,0,21,3|o,990000,0,22,3|o,990000,0,23,3|o,990000,0,24,3|o,990000,0,25,3|o,990000,0,26,3|o,990000,0,27,3|o,990000,0,28,3|o,990000,0,29,3|o,990000,0,30,3|o,990000,0,31,3|o,990000,0,32,3|
-  o,339966,1,0,3|o,339966,1,1,3|o,339966,1,2,3|o,339966,1,3,3|o,339966,1,4,3|o,339966,1,5,3|o,339966,1,6,3|o,339966,1,7,3|o,339966,1,8,3|o,339966,1,9,3|o,339966,1,10,3|o,339966,1,11,3|o,339966,1,12,3|o,339966,1,13,3|o,339966,1,14,3|o,339966,1,15,3|o,339966,1,16,3|o,339966,1,17,3|o,339966,1,18,3|o,339966,1,19,3|o,339966,1,20,3|o,339966,1,21,3|o,339966,1,22,3
-"/></p>
+        <h2>2009 Snowfall Trends</h2>
+<p><img src="http://chart.apis.google.com/chart?chs=400x200&amp;chdlp=b&amp;chf=bg,s,ffffff|c,s,ffffff&amp;chxt=x,y&amp;chxl=0:|Nov|Dec|Jan|1:|0.00|15.00|30.00&amp;cht=lc&amp;chd=t:0.00,26.66,40.00,46.66,73.33,100.00|0.00,26.66,13.33,6.66,26.66,33.33&amp;chdl=Base+Depth|New+Snow&amp;chco=0000ff,009900&amp;chls=2,1,0|2,3,3" /></p><br />
       </div>
       <!-- END snowfall trend module -->
     
       <!-- BEGIN snowfall trend module -->
       <div class="box">
-        <h2>Temperature Profile</h2>
+        <h2>7 Day Temperature Profile</h2>
         <p>Grab data from NOAA and display profile of last seven days highs and lows.</p>
 <p><img src="http://chart.apis.google.com/chart?cht=lc&chs=400x200&chxt=x,y&chxr=0,0,10|1,0,16.8&chd=t:71.4,65.5,59.5,65.5,77.4,95.2,89.3,83.3,65.5,71.4,77.4|59.5,47.6,29.8,23.8,29.8,35.7,41.7,29.8,23.8,35.7,41.7&chco=990000,339966&chls=1,1,0|1,1,0|1,1,0&chdl=High|Low
  &chm=o,990000,0,0,3|o,990000,0,1,3|o,990000,0,2,3|o,990000,0,3,3|o,990000,0,4,3|o,990000,0,5,3|o,990000,0,6,3|o,990000,0,7,3|o,990000,0,8,3|o,990000,0,9,3|o,990000,0,10,3|o,990000,0,11,3|o,990000,0,12,3|o,990000,0,13,3|o,990000,0,14,3|o,990000,0,15,3|o,990000,0,16,3|o,990000,0,17,3|o,990000,0,18,3|o,990000,0,19,3|o,990000,0,20,3|o,990000,0,21,3|o,990000,0,22,3|o,990000,0,23,3|o,990000,0,24,3|o,990000,0,25,3|o,990000,0,26,3|o,990000,0,27,3|o,990000,0,28,3|o,990000,0,29,3|o,990000,0,30,3|o,990000,0,31,3|o,990000,0,32,3|
