two small edits to models.py

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
       
       <!-- BEGIN weather forecast module -->
       <div class="post">
-        <h2><a href="/home">3 Day Weather Forecast</a></h2>
+        <h2>3 Day Weather Forecast</h2>
         <p>Today {Insert Day}</p>
           <ul>
             <li>Current Temp: {Insert Temp}</li>
@@ -38,7 +38,7 @@
       
       <!-- BEGIN resort snow report module -->
       <div class="post">
-        <h2><a href="/home">Today's Resort Snow Report</a></h2>
+        <h2>Today's Resort Snow Report</h2>
         <p>Squaw Valley</p>
           <ul>
             <li>High Temp: {Insert Temp}</li>
@@ -68,7 +68,7 @@
       
       <!-- BEGIN dot traffic conditions module -->
       <div class="post">
-        <h2><a href="/home">DOT Road Conditions</a></h2>
+        <h2>DOT Road Conditions</h2>
         <p>Chains</p>
           <ul>
             <li>Chains Required: {Insert Yes / No}</li>
@@ -85,7 +85,7 @@
 
       <!-- BEGIN google maps with traffic layer of tahoe -->
       <div class="post"> 
-        <h2><a href="/home">Map of Traffic Conditions</a></h2>
+        <h2>Map of Traffic Conditions</h2>
 <table cellspacing="0" cellpadding="0" border="0"><tr><td><iframe src="http://www.map-generator.net/extmap.php?name=Squaw%20Valley%20USA&amp;address=squaw%20valley%2C%20calififornia&amp;width=440&amp;height=300&amp;maptype=map&amp;zoom=14&amp;hl=en&amp;t=1255915918" width="440" height="300" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"></iframe></td></tr></td></tr></table><!-- Do not change code! -->
          <br />
       </div>
