--- a/templates/home.html
+++ b/templates/home.html
@@ -79,7 +79,7 @@
         
         <p>Details</p>
           <ul>
-            {% if DOTi80RoadConditions.road_conditions_details %}<li>{{ DOTi80RoadConditions.road_conditions_details }}</li>{% else %}<li>No New Traffic Updates</li>{% endif %}
+            {% if DOTi80RoadConditions.road_conditions_details %}<li>{{ DOTi80RoadConditions.road_conditions_details|title }}</li>{% else %}<li>No New Traffic Updates</li>{% endif %}
           </ul>
         <p>  - Last Updated: {{ DOTi80RoadConditions.date_time_added|date:"F j, Y - P" }}</p>
         <br />
