minor code improvements

--- a/templates/error.html
+++ b/templates/error.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     
-There has been an error!!
+There has been an error!! The Mountain Metrics team has been alerted.
+
 
 {% endblock %}
