--- a/templates/error.html
+++ b/templates/error.html
@@ -5,4 +5,15 @@
 There has been an error!! The Mountain Metrics team has been alerted.
 
 
+      <!-- BEGIN error module -->
+      <div class="post">
+        <h2>Wow, we failed.</h2>
+          <p>
+          
+          <object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/7Mlch97EQDA&hl=en_US&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/7Mlch97EQDA&hl=en_US&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
+          
+         </p>
+      </div>
+      <!-- END error module -->
+
 {% endblock %}
