added variables for resort and traffic to front end, including proper if statements in case we have no data

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,19 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-    
-There has been an error!! The Mountain Metrics team has been alerted.
 
-
-      <!-- BEGIN error module -->
+    <!-- BEGIN error module -->
+    <div id="content">
       <div class="post">
-        <h2>Wow, we failed.</h2>
-          <p>
-          
-          <object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/7Mlch97EQDA&hl=en_US&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/7Mlch97EQDA&hl=en_US&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
-          
-         </p>
+        <h2>Wow, we failed. but not as bad as this guy...</h2>
+          <p><object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/7Mlch97EQDA&hl=en_US&fs=1&"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/7Mlch97EQDA&hl=en_US&fs=1&" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
+          </p>
       </div>
+      
+      <div class="box">
+      </div>
+    </div>  
       <!-- END error module -->
-
 {% endblock %}
